--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,11 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@aws-cdk/aws-iot": "^1.200.0",
+    "@aws-cdk/aws-iot-actions": "^1.200.0",
     "ajv": "^8.12.0",
     "aws-cdk-lib": "2.77.0",
+    "cdk-iot-core-certificates": "^1.0.264",
     "commander": "^10.0.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
