--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -14,7 +14,7 @@
     "ignoreDeprecations": "5.0",
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
