closing for the night

--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -12,6 +12,7 @@
     // "resolveJsonModule": true,
     "strict": true,
     "ignoreDeprecations": "5.0",
+    "useUnknownInCatchVariables": false
   },
   "include": [
     "src/**/*.ts"
